# devsecops-security-orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml  env.example
backend/: .env.example  README.md  env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 04c47c6921fb_add_credential_ref_and_is_active_to_.py  072bb3e01833_tighten_findings_repository_id_to_not_.py  2d367959d214_add_semgrep_scanner_type.py  6707ad441599_baseline.py  76e6c25b2f62_add_webhook_deliveries.py  9a4af6f0e9d0_add_repository_id_and_scan_run_tracking_.py  b46d75368f19_add_users_and_api_keys_tables.py
backend/src/orchestrator/api/: main.py
backend/src/orchestrator/workers/: backoff.py  celery_app.py  db.py
backend/tests/: conftest.py
backend/tests/architecture/: test_prometheus_import_boundary.py
backend/tests/compose/: test_prometheus_config.py
backend/tests/e2e/: test_placeholder.py
backend/tests/fakes/: __init__.py  fake_container_runner.py
backend/tests/integration/: conftest.py  test_alembic_env.py  test_ast_sast_adapter_live.py  test_auth_flow.py  test_cascade_delete.py  test_code_repository_repository.py  test_docker_container_runner_live.py  test_finding_repository.py  test_findings_api.py  test_gitleaks_adapter_live.py  test_health_ready.py  test_migration_add_credential_ref_is_active.py  test_migration_add_repository_id_scan_run_tracking.py  test_migration_add_webhook_deliveries.py  test_migration_roundtrip.py  test_migration_tighten_findings_repository_id.py  test_pip_audit_adapter_live.py  test_placeholder.py  test_process_scan_task.py  test_repositories.py  test_repositories_api.py  test_scan_repositories.py  test_scans_api.py  test_semgrep_adapter_live.py  test_unique_constraints.py  test_webhook_delivery_repository.py  test_webhooks_api.py
backend/tests/observability/: test_metrics.py  test_worker_metrics.py
backend/tests/unit/: test_health.py  test_layering_boundaries.py  test_main.py  test_placeholder.py  test_settings.py
backend/tests/unit/application/: test_api_key_schema.py  test_auth_schema.py  test_authenticate_user.py  test_code_repository_schema.py  test_create_user.py  test_deactivate_repository.py  test_evaluate_repository_policy.py  test_finding_redaction_across_use_cases.py  test_finding_schema.py  test_get_finding.py  test_get_repository.py  test_get_repository_diff.py  test_get_repository_trends.py  test_get_scan_run_detail.py  test_github_webhook_schema.py  test_ingest_webhook.py  test_issue_api_key.py  test_list_findings.py  test_list_repositories.py  test_list_scan_findings.py  test_list_scan_runs.py  test_redaction.py  test_register_repository.py  test_trigger_scan.py  (+7 more)
(+262 files in other folders)
