[project]
name = "orchestrator"
version = "0.1.0"
description = "DevSecOps Security Orchestrator — backend API and workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "celery[redis]>=5.4",
    "flower>=2.0",
    "docker>=7.1",
    "opentelemetry-api>=1.44",
    "opentelemetry-sdk>=1.44",
    "opentelemetry-exporter-otlp-proto-grpc>=1.44",
    "opentelemetry-instrumentation-fastapi>=0.65b0",
    "opentelemetry-instrumentation-celery>=0.65b0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "alembic>=1.18.5",
    "types-docker>=7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires a live external dependency — Postgres reachable via DATABASE_URL (see docker-compose.override.yml) and/or a reachable Docker socket (Module 6 container tests)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry.instrumentation.*"]
ignore_missing_imports = true
